--- a/sc/button-two-color/my.css
+++ b/sc/button-two-color/my.css
@@ -1,9 +1,9 @@
-.sc-button {
+.sc-button-color2 {
     background-image: linear-gradient(#abcdef, #ffffff);
     background-size: auto 200%;
     background-position: 0 100%;
     transition: background-position 0.5s;
 }    
-.sc-button:hover {
+.sc-button-color2:hover {
     background-position: 0 0;
 }
