--- a/sc/sc.css
+++ b/sc/sc.css
@@ -1,9 +1,29 @@
-.sc-button {
+.sc-button-color2 {
     background-image: linear-gradient(#abcdef, #ffffff);
     background-size: auto 200%;
     background-position: 0 100%;
     transition: background-position 0.5s;
 }    
-.sc-button:hover {
+.sc-button-color2:hover {
     background-position: 0 0;
 }
+.sc-text-blurry {
+   color: transparent;
+   text-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+.sc-loading:after {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    animation: sc-loading-ellipsis 2s infinite;
+    content: "\2026"; /* ascii code for the ellipsis character */
+}
+@keyframes sc-loading-ellipsis {
+    from {
+        width: 2px;
+    }
+    to {
+        width: 15px;
+    }
+}
+.sc-loading:afte
