--- a/sc/sc.css
+++ b/sc/sc.css
@@ -7,6 +7,15 @@
 .sc-button-color2:hover {
     background-position: 0 0;
 }
+.sc-image-photo {
+    background:#000; /*Change this to a background image or remove*/
+    border:solid #fff;
+    border-width:6px 6px 6px 6px;
+    box-shadow:1px 1px 5px #333; /* Standard blur at 5px. Increase for more depth */
+    -webkit-box-shadow:1px 1px 5px #333;
+    -moz-box-shadow:1px 1px 5px #333;
+}                                
+
 .sc-text-blurry {
    color: transparent;
    text-shadow: 0 0 5px rgba(0,0,0,0.5);
